--- a/mobile_demo_test.html
+++ b/mobile_demo_test.html
@@ -197,6 +197,16 @@ BOTTOM BAR NAVIGATION
 	left: 3px;
 }
 
+#footer_speaker_icon:after{
+	content: "";
+	position: absolute;
+	left: calc(50% - 20px);
+	top: calc(50% - 20px);
+	height: 35px;
+	width: 40px;
+	background: transparent;
+}
+
 
 
 
@@ -259,6 +269,13 @@ TITLE SLIDE
 	border: 1px solid #fdba3d;
 	padding: 10px;
 	border-radius: 3px;
+}
+
+#intro_enable_sound{
+	display: none;
+	font-size: 14px;
+	color: #999;
+	padding-top: 10px;
 }
 
 
@@ -666,21 +683,23 @@ HEADER
 FOOTER
 *********************************************************************************-->
 <div id="bottombar">
-	<!-- gear icon -->
-	<!-- <svg style="display:none; float:left; stroke:none; fill:#fff" width="20px" height="20px" viewBox="0 0 20 20" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:sketch="http://www.bohemiancoding.com/sketch/ns">
-		<path d="M10.447451,0.985882353 C10.76,0.985882353 10.9964706,1.22235294 10.9964706,1.53529412 L10.9964706,2.31960784 C10.9964706,3.32745098 12.2643137,4.19058824 13.3011765,4.19058824 C13.8235294,4.19058824 14.3254902,3.96745098 14.6568627,3.6 L15.1533333,3.10313725 C15.2529412,3.0027451 15.4023529,2.94509804 15.5615686,2.94509804 C15.72,2.94509804 15.8686275,3.0027451 15.9682353,3.1027451 L17.1164706,4.25019608 C17.3407843,4.47411765 17.34,4.83960784 17.1164706,5.06431373 L16.6545098,5.52666667 C16.2501961,5.89254902 16.0270588,6.38627451 16.0270588,6.9172549 C16.0270588,7.95372549 16.8843137,8.82901961 17.8984314,8.82901961 L18.6827451,8.82901961 C18.9952941,8.82901961 19.2317647,9.0654902 19.2317647,9.37843137 L19.2317647,10.9470588 C19.2317647,11.26 18.9952941,11.4960784 18.6827451,11.4960784 L17.8984314,11.4960784 C16.8843137,11.4960784 16.0270588,12.3713725 16.0270588,13.4078431 C16.0270588,13.9380392 16.2447059,14.4270588 16.6176471,14.7643137 L17.1156863,15.2603922 C17.34,15.4854902 17.3407843,15.8513725 17.1156863,16.0752941 L15.9682353,17.2231373 C15.8686275,17.3235294 15.72,17.3803922 15.5615686,17.3803922 C15.4031373,17.3803922 15.2537255,17.3227451 15.1533333,17.2227451 L14.6905882,16.7607843 C14.3239216,16.3568627 13.8305882,16.1345098 13.3011765,16.1345098 C12.2643137,16.1345098 11.3886275,16.9913725 11.3886275,18.0058824 L11.3886275,18.7901961 C11.3886275,19.1031373 11.1521569,19.3392157 10.8396078,19.3392157 L9.27098039,19.3392157 C8.95843137,19.3392157 8.72196078,19.1031373 8.72196078,18.7901961 L8.72196078,18.0058824 C8.72196078,16.9913725 7.84627451,16.1345098 6.80941176,16.1345098 C6.28705882,16.1345098 5.78509804,16.3580392 5.45372549,16.725098 L4.95647059,17.2231373 C4.85686275,17.3235294 4.70823529,17.3803922 4.54980392,17.3803922 C4.39058824,17.3803922 4.2427451,17.3235294 4.14235294,17.2227451 L2.99411765,16.0752941 C2.76980392,15.8513725 2.77058824,15.4854902 2.99411765,15.2611765 L3.45607843,14.7984314 C3.86039216,14.432549 4.08313725,13.9388235 4.08313725,13.4078431 C4.08313725,12.3713725 3.22627451,11.4960784 2.21215686,11.4960784 L1.42784314,11.4960784 C1.11529412,11.4960784 0.878823529,11.26 0.878823529,10.9470588 L0.878823529,9.37843137 C0.878823529,9.0654902 1.11529412,8.82901961 1.42784314,8.82901961 L2.21215686,8.82901961 C3.22627451,8.82901961 4.08313725,7.95372549 4.08313725,6.9172549 C4.08313725,6.38745098 3.86588235,5.89843137 3.49294118,5.56078431 L2.99490196,5.06509804 C2.77058824,4.83960784 2.76980392,4.47411765 2.99411765,4.25019608 L4.14313725,3.10235294 C4.24196078,3.00235294 4.39058824,2.94509804 4.54980392,2.94509804 C4.70901961,2.94509804 4.85764706,3.0027451 4.9572549,3.1027451 L5.42,3.56431373 C5.78666667,3.96862745 6.28,4.19058824 6.80941176,4.19058824 C7.84627451,4.19058824 8.72196078,3.33411765 8.72196078,2.31960784 L8.72196078,1.53529412 C8.72196078,1.22235294 8.95843137,0.985882353 9.27098039,0.985882353 L10.447451,0.985882353 M10.447451,0.358823529 L9.27098039,0.358823529 C8.61137255,0.358823529 8.0945098,0.875686275 8.0945098,1.53529412 L8.0945098,2.31960784 C8.0945098,2.99333333 7.50627451,3.56313725 6.80941176,3.56313725 C6.46392157,3.56313725 6.13215686,3.41568627 5.88470588,3.1427451 L5.40078431,2.65882353 C5.17333333,2.43137255 4.86156863,2.31803922 4.54980392,2.31803922 C4.2372549,2.31803922 3.9254902,2.43176471 3.69882353,2.65882353 L2.55058824,3.80627451 C2.08196078,4.27490196 2.08196078,5.03764706 2.55058824,5.50823529 L3.04941176,6.00509804 C3.31137255,6.2427451 3.45607843,6.56666667 3.45607843,6.9172549 C3.45607843,7.61372549 2.88627451,8.20196078 2.21215686,8.20196078 L1.42784314,8.20196078 C0.768235294,8.20196078 0.251372549,8.71882353 0.251372549,9.37843137 L0.251372549,10.9470588 C0.251372549,11.6062745 0.768235294,12.1235294 1.42784314,12.1235294 L2.21215686,12.1235294 C2.88627451,12.1235294 3.45607843,12.7117647 3.45607843,13.4078431 C3.45607843,13.7541176 3.30823529,14.0866667 3.03568627,14.3329412 L2.55058824,14.8172549 C2.08196078,15.287451 2.08196078,16.0501961 2.55058824,16.5192157 L3.69882353,17.6666667 C3.9254902,17.8941176 4.2372549,18.0082353 4.54980392,18.0082353 C4.86156863,18.0082353 5.17333333,17.8941176 5.40078431,17.6666667 L5.89764706,17.1686275 C6.13137255,16.9105882 6.46392157,16.7619608 6.80941176,16.7619608 C7.50627451,16.7619608 8.0945098,17.3317647 8.0945098,18.0058824 L8.0945098,18.7901961 C8.0945098,19.4494118 8.61137255,19.9666667 9.27098039,19.9666667 L10.8396078,19.9666667 C11.4992157,19.9666667 12.0160784,19.4494118 12.0160784,18.7901961 L12.0160784,18.0058824 C12.0160784,17.3317647 12.6043137,16.7619608 13.3011765,16.7619608 C13.6466667,16.7619608 13.9784314,16.9098039 14.2258824,17.1823529 L14.7098039,17.6666667 C14.9372549,17.8941176 15.2498039,18.0082353 15.5615686,18.0082353 C15.8733333,18.0082353 16.185098,17.8941176 16.412549,17.6666667 L17.56,16.5192157 C18.0286275,16.0501961 18.0286275,15.287451 17.56,14.8172549 L17.0611765,14.32 C16.7992157,14.0827451 16.6545098,13.7588235 16.6545098,13.4078431 C16.6545098,12.7117647 17.2243137,12.1235294 17.8984314,12.1235294 L18.6827451,12.1235294 C19.3423529,12.1235294 19.8592157,11.6062745 19.8592157,10.9470588 L19.8592157,9.37843137 C19.8592157,8.71882353 19.3423529,8.20196078 18.6827451,8.20196078 L17.8984314,8.20196078 C17.2243137,8.20196078 16.6545098,7.61372549 16.6545098,6.9172549 C16.6545098,6.57098039 16.8023529,6.23882353 17.074902,5.99215686 L17.56,5.50823529 C18.0286275,5.03764706 18.0286275,4.27490196 17.56,3.80627451 L16.412549,2.65882353 C16.185098,2.43137255 15.8733333,2.31803922 15.5615686,2.31803922 C15.2498039,2.31803922 14.9372549,2.43176471 14.7098039,2.65882353 L14.2129412,3.15647059 C13.9792157,3.41490196 13.6466667,3.56313725 13.3011765,3.56313725 C12.5843137,3.56313725 11.6239216,2.94823529 11.6239216,2.31960784 L11.6239216,1.53529412 C11.6239216,0.875686275 11.1070588,0.358823529 10.447451,0.358823529" id="Fill-1"></path>
-		<path d="M10.0552941,6.47607843 C12.0882353,6.47607843 13.7415686,8.12980392 13.7415686,10.1627451 C13.7415686,12.1952941 12.0882353,13.8490196 10.0552941,13.8490196 C8.02235294,13.8490196 6.36901961,12.1952941 6.36901961,10.1627451 C6.36901961,8.12980392 8.02235294,6.47607843 10.0552941,6.47607843 M10.0552941,5.84901961 C7.67254902,5.84901961 5.74156863,7.78039216 5.74156863,10.1627451 C5.74156863,12.545098 7.67254902,14.4764706 10.0552941,14.4764706 C12.4380392,14.4764706 14.3690196,12.545098 14.3690196,10.1627451 C14.3690196,7.78039216 12.4380392,5.84901961 10.0552941,5.84901961" id="Fill-2"></path>
-	</svg> -->
 
 	<div id="nav_timeline"></div>
 
-	<!-- speaker icon -->
-	<!-- <svg style="display:none; float:right;" id="speaker_icon" width="20px" height="20px" viewBox="0 0 8 7" xmlns="http://www.w3.org/2000/svg">
-		<style type="text/css"><![CDATA[ #speaker_icon rect,#speaker_icon polygon{ stroke:#fff; stroke-width:0.3; fill:transparent; } #speaker_icon path{ stroke:#fff; stroke-width:0.3; stroke-linecap:round; fill:none; } ]]></style>
-		<rect x="0" y="2" width="1.5" height="3"></rect>
-		<polygon points="1.5,2 4,0 4,7 1.5,5"></polygon>
-		<path d="M4.5 3 q0.5 0.5 0 1"></path><path d="M5.5 2 q1 1.5 0 3"></path><path d="M6.5 1 q1.5 2.5 0 5"></path>
-	</svg> -->
+	<!-- footer speaker icon -->
+	<div id="footer_speaker_icon" style="display:none; float:right; position:relative;">
+		<svg id="footer_speaker_icon_svg" style="position:relative; top:1px; overflow:visible;" width="20px" height="20px" viewBox="0 0 8 7" xmlns="http://www.w3.org/2000/svg">
+			<style type="text/css"><![CDATA[ #footer_speaker_icon_svg rect,#footer_speaker_icon_svg polygon{ stroke:#fff; stroke-width:0.3; fill:transparent; } #footer_speaker_icon_svg path{ stroke:#fff; stroke-width:0.3; stroke-linecap:round; fill:none; } ]]></style>
+			<rect x="0" y="2" width="1.5" height="3"></rect>
+			<polygon points="1.5,2 4,0 4,7 1.5,5"></polygon>
+			<path d="M4.5 3 q0.5 0.5 0 1"></path><path d="M5.5 2 q1 1.5 0 3"></path><path d="M6.5 1 q1.5 2.5 0 5"></path>
+
+			<g id="volume_off" style="display:none;">
+				<circle cx="4" cy="3.5" r="6" style="stroke:#fdba3d; stroke-width:0.8; fill:none;"></circle>
+				<line x1="-0.5" y1="7.2" x2="9.1" y2="0" style="stroke:#fdba3d; stroke-width:0.8;"></line>
+			</g>
+		</svg>
+	</div>
 </div>
 
 
@@ -707,6 +726,7 @@ AUDIO
 
 
 
+<div id="voiceover_container" style="display:none;"></div>
 <!-- 
 <audio style="display:none;"><source src="./audio/voiceovers/100_times_persecond.mp3" type="audio/mpeg"></audio>
 <audio style="display:none;"><source src="./audio/voiceovers/did_u_notice_no_translations.mp3" type="audio/mpeg"></audio>
@@ -918,6 +938,10 @@ MAIN DEMO CONTAINER
 				<br>
 				<div id="tap_to_start">
 					Tap to start
+				</div>
+
+				<div id="intro_enable_sound">
+					Keep sound ON for optimal experience
 				</div>
 			</div>
 		</div>
@@ -2793,6 +2817,43 @@ else if(typeof(console)==='undefined'){
 
 
 
+
+/**********************************************************************
+**********************************************************************
+**********************************************************************
+
+CONTROLS
+
+	This section lets you turn pieces of the demo on or off
+
+**********************************************************************
+**********************************************************************
+***********************************************************************/
+
+
+// this controls which email forms we're using
+var email_forms = {
+	'beginning' : false
+	,'exit' : true
+	,'appstore' : true
+	,'end' : true
+}
+
+// turn the voiceovers on or off
+var voiceovers_turned_on = true;
+
+
+
+
+
+
+
+
+
+
+
+
+
 /**********************************************************************
 GENERAL VARIABLES AND SETTINGS
 ***********************************************************************/
@@ -3289,18 +3350,112 @@ for(var i=0; i<slide_functions.length; i++){
 
 
 
+
+
+
+
+
+/**********************************************************************
+VOICEOVERS
+***********************************************************************/
+
+if(voiceovers_turned_on){
+
+	var voiceover_files = [
+		'100_times_persecond',
+		'did_u_notice_no_translations',
+		'download_the_app',
+		'get_truly_confident',
+		'give_youfeedback_instantly',
+		'remember_tap_unlabled_image',
+		'schedule_tutors',
+		'speaking_is_core_of_rs',
+		'take_spanish_to_nextlevel',
+		'tap_image_to_hear_sp',
+		'tap_unlabled_image',
+		'the_key_to_natural_way_oflearning',
+		'this_is_the_rs_way',
+		'try_it_foryourself',
+		'we_introduce_to_words_images',
+		'welcome',
+		'which_language',
+		'words_into_phrases',
+		'youll_repeat_what_youheard'
+	];
+
+	for(var i=0; i<voiceover_files.length; i++){
+		var audio = document.createElement('audio');
+		audio.style.display = 'none';
+		audio.id = voiceover_files[i];
+		audio.innerHTML = '<source src="./audio/voiceovers/'+voiceover_files[i]+'.mp3" type="audio/mpeg">';
+		document.getElementById('voiceover_container').appendChild(audio);
+	}
+
+}
+
+function play_voiceover(id){
+	if(voiceovers_turned_on){
+		document.getElementById(id).play();
+	}
+}
+
+if(voiceovers_turned_on){
+	// bottom nav bar style update
+	yb.id('bottombar').style.textAlign = 'left';
+	yb.id('footer_speaker_icon').style.display = 'inline-block';
+	yb.id('nav_timeline').style.left = '5px';
+	
+	// intro screen style update
+	yb.id('tap_to_start').style.marginTop = '20px';
+}
+
+
+
+// toggle volume
+(function(){
+	var volume_on = true;
+
+	var audio = document.querySelectorAll('audio');
+
+	function mute_all(truefalse){
+		for(var i=0; i<audio.length; i++){
+			audio[i].muted = truefalse;
+		}
+	}
+
+	function toggle_volume(){
+		if(volume_on){
+			mute_all(true);
+			volume_on = false;
+			yb.id('volume_off').style.display = 'block';
+		}
+		else{
+			mute_all(false);
+			volume_on = true;
+			yb.id('volume_off').style.display = 'none';
+		}
+	}
+
+	yb.id('footer_speaker_icon')['on'+touchstart] = function(e){
+		e.preventDefault();
+		
+		toggle_volume();
+	};
+})();
+
+
+
+
+
+
+
+
+
+
 /**********************************************************************
 START THE DEMO
 ***********************************************************************/
 
-
-// this controls which email forms we're using
-var email_forms = {
-	'beginning' : false
-	,'exit' : true
-	,'appstore' : true
-	,'end' : true
-}
 
 // if we're showing the beginning email form, prepare properly
 if(email_forms.beginning){
@@ -3698,11 +3853,8 @@ yb.id('language_dropdown').onchange = function(){
 TITLE SLIDE
 ***************************************************************/
 
-var ready_to_swipe_start = false; // ensure the swipe doesn't happen until the animation is done
 
 function runTitleSlide(){
-	
-	ready_to_swipe_start = false;
 
 	// make sure the slide itself is showing properly
 	yb.id('demo_slide_0').style.display = 'block';
@@ -3733,6 +3885,15 @@ function runTitleSlide(){
 	var tap_to_start_time = monument_start+18*monument_increment;
 	bounce('tap_to_start',tap_to_start_time ,bounce_speed,'0px,20px','0px,-5px','0px,0px', fade_speed, 'inline-block');
 	
+	
+	// handle messaging if voiceovers are turned on
+	if(voiceovers_turned_on){
+		yb.id('intro_enable_sound').style.visibility = 'hidden';
+		yb.id('intro_enable_sound').style.display = 'block';
+		setTimeout(function(){
+			smoothFadeIn('intro_enable_sound');
+		},tap_to_start_time+500);
+	}
 }
 
 // bind the tap event for the "tap to start" button
@@ -3777,6 +3938,8 @@ for(var i=0; i<language_buttons.length; i++){
 
 
 function select_language_slide(){
+
+	play_voiceover('which_language');
 
 	var language_buttons = yb.id('select_language_buttons').children; // declared in here for faster access
 
@@ -3888,6 +4051,7 @@ $('#close_demo_instructions').on(touchstart, function(ev){
 
 // animate the interactive pieces of the demo
 function bring_in_demo_pieces(){
+
 	// handle timing
 	var delays = [1500];
 	delays[1] = delays[0] + 250;
@@ -3914,6 +4078,7 @@ function hide_demo_pieces(){
 
 
 function start_demo(){
+
 
 	// reset the demo
 
@@ -3984,6 +4149,11 @@ function start_demo(){
 
 	function showDemoScreen(n){
 		current_demo_screen = n;
+
+		// voiceover on first screen
+		if(n==1){
+			play_voiceover('remember_tap_unlabled_image');
+		}
 
 		// easy access to current demo screen and main word
 		var this_screen = democontent['screen_'+n];
@@ -4078,6 +4248,8 @@ function start_demo(){
 
 			// show tooltip (animated)
 			setTimeout(function(){
+				play_voiceover('did_u_notice_no_translations');
+
 				show_demo_tooltip_overlay();
 				bounce('dotted_circle',magnifier_delay ,default_bounce_time,'0px,20px','0px,-5px','0px,0px', default_fade_time);
 				bounce('demotooltip',tooltip_bubble_delay ,default_bounce_time,'0px,-20px','0px,5px','0px,0px', default_fade_time);
@@ -4267,6 +4439,8 @@ animations:
 
 
 function run_patterns_slide(){
+
+	play_voiceover('words_into_phrases');
 
 	// store patterns boxes in variables
 	var patterns_boxes = document.querySelectorAll('.patterns_box');
@@ -4672,6 +4846,9 @@ function run_speech_recognition_slide(){
 	setTimeout(function(){
 		smoothFadeOut('speech_rec_title');
 		smoothFadeIn('get_you_speaking_container',0.5,'table');
+
+		play_voiceover('speaking_is_core_of_rs');
+		
 	}, speech_rec_title_fade_time);
 
 	var get_you_speaking_delay = [speech_rec_title_fade_time + 800];
@@ -4693,6 +4870,9 @@ function run_speech_recognition_slide(){
 
 
 function run_pronunciation_section(){
+
+	play_voiceover('tap_image_to_hear_sp');
+
 	// hide previous section and reset this one
 	smoothFadeOut('get_you_speaking_container');
 	reset_tap_image_box();
@@ -4756,6 +4936,8 @@ $('#tap_image_box').on(touchstart, function(ev){
 
 // handle the "repeat what you've heard" piece of the speech recognition section
 function repeat_what_youve_heard(){
+
+	play_voiceover('youll_repeat_what_youheard');
 
 	// first reset stuff
 	hide_tap_image_text();
@@ -4835,6 +5017,9 @@ function compare_with_millions(){
 
 	// 100x per second
 	function hundred_times_per_second(){
+
+		play_voiceover('100_times_persecond');
+		
 		// first reset stuff
 		hide_tap_image_text();
 		stop_speech_samples_animation();
@@ -4853,6 +5038,9 @@ function compare_with_millions(){
 
 	// get instant feedback
 	function instant_feedback(){
+		play_voiceover('give_youfeedback_instantly');
+
+
 		var feedback_delays = [200];
 		feedback_delays[1] = feedback_delays[0] + 700;
 		feedback_delays[2] = feedback_delays[1] + 300;
@@ -4958,6 +5146,8 @@ TUTORS SLIDE
 ***************************************************************/
 
 function run_tutors_slide(){
+
+	play_voiceover('try_it_foryourself');
 	
 	// hide elements but maintain their visual space
 	var visibility_hidden = ['tutors_try_it_yourself','download_or_tutors','tutors_speech_balloons','tutor_photo'];
@@ -5038,6 +5228,8 @@ function continue_to_tutors(){
 
 
 function schedule_sessions(){
+
+	play_voiceover('schedule_tutors');
 	
 	// fade out previous section
 	smoothFadeOut('get_confident');
@@ -5067,6 +5259,8 @@ function schedule_sessions(){
 
 	// take your language to the next level
 	function next_level_language(){
+		play_voiceover('take_spanish_to_nextlevel');
+
 		smoothFadeOut('schedule_sessions_text');
 		bounce('next_level_text',0,default_bounce_time,'0px,-20px','0px,5px','0px,0px', default_fade_time);
 
@@ -5114,6 +5308,10 @@ $('#restart_demo').on(touchstart, function(ev){
 // actually run the final slide
 function run_final_slide(){
 	smoothFadeIn('final_slide');
+
+
+	play_voiceover('this_is_the_rs_way');
+
 
 	// make sure all main elements start out hidden
 	var to_hide = ['gold_arc_final','final_title_1','final_title_2','restart_demo_container','final_cta','final_are_you_ready','try_it_free','download_button','also_available'];
